Change page title

--- a/routemanager/templates/layout.html
+++ b/routemanager/templates/layout.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>RemoteManager</title>
+    <title>RouteManager</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="{{ url_for('static', filename='css/vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet" />
@@ -25,7 +25,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse">
               <span class="sr-only">Toggle navigation</span>
             </button>
-                <a class="navbar-brand" href="/">RemoteManager</a>
+                <a class="navbar-brand" href="/">RouteManager</a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
